general fixes to template

--- a/src/popup.html
+++ b/src/popup.html
@@ -6,15 +6,13 @@
   </head>
   <body>
     <div id="app" class="popup-content">
-      <h1 class="app-name">Extension Boilerplate</h1>
+      <h3 class="app-name">Template</h3>
 
       <div id="display-container"></div>
 
       <footer>
         <p>
-          <small>
             <a href="#" id="options">Options</a>
-          </small>
         </p>
       </footer>
     </div>
